--- a/views/dives/edit.ejs
+++ b/views/dives/edit.ejs
@@ -98,7 +98,7 @@
     <br>
     <div>DANGER ZONE</div><br>
 
-    <!-- delete dive         -->
+    <!-- delete dive button         -->
     <form action="/dives/<%= dive._id %>/delete?_method=DELETE"
         class="delete-card" method="POST">
         <button id= "delete-button" class = "style-button" type="submit"><strong>delete dive</strong></button>
