--- a/views/dives/new.ejs
+++ b/views/dives/new.ejs
@@ -6,6 +6,7 @@
 
 <div class = "content-body">
 
+<!-- form to add a new dive to log -->
     <form id="new-dive-form" action="/dives" method="POST">
         <label>dive no.*
             <input class = "sm" type="Number" name="number">
@@ -90,6 +91,8 @@
             <textarea id="notes-input" type="String" name="notes" rows="5" cols="50"></textarea>
         </label><br>
         <br>
+        
+    <!-- submit form button     -->
         <input class="style-button" type="submit" value="add dive">
         <div class="bottom-space">&nbsp</div>
     </form>
