--- a/views/dives/show.ejs
+++ b/views/dives/show.ejs
@@ -54,6 +54,7 @@
     <div id="note-container"><%= dive.notes%></div>
     <br>
 <hr> 
+<!-- buttons -->
     <br>
     <a href="/dives/<%= dive._id%>/edit"><button class="style-button">edit dive</button></a>
     <br>
