--- a/views/profiles/new.ejs
+++ b/views/profiles/new.ejs
@@ -5,7 +5,7 @@
 <h1><%= user.name%></h1>
 
 <div class="content-body">
-
+<!-- add new profile info -->
     <form action="/profile" method="POST">
         <label>Username
             <input type="String" name="nickname">
